  #388.
- Non US-ASCII characters weren't being properly handled on the
  command line. See #266.
- Quoted paths are now consistently handled correctly when passed
  on the command line. This is important, for example, when
  multiple paths are being passed in and more than one path
  contains spaces (and therefore more than one path will need to
  be enclosed in double quotes).
- Fixed an issue with handling the properties item on the
  background context menu.
- Previously, listview groups were always sorted by name. Now,
  they're sorted based on the attributes of the groups
  themselves. See #101.
- The group an item is in is now updated when the item is
  updated. See #110.
- When pressing backspace in a locked tab to navigate up, the
  navigation would occur in that tab, instead of a new tab. See
  #265.
- If a filtered item is renamed, it will now be shown again if it
  no longer needs to be filtered. Previously, the item would
  remain hidden until filtering was disabled.
- When starting the application, the previous window position
  will only be used if it's visible. If the saved position is
  off-screen (e.g. because the monitor configuration has
  changed), the default position will be used instead.
- A saved dialog position will now only be used if the saved
  position is visible on screen.
- When renaming an item, the item is updated immediately if the
  rename succeeds. Previously, the item details would be updated
  a short time later. That meant that renaming an item, then
  immediately pressing enter would fail to open the item. See
  #281.
- Renaming virtual items in the treeview now works as expected.
- Pressing F2 wouldn't cycle between the filename and extension.
  See #293.
- Previously, when running the application under Windows PE, the
  treeview was empty.
- When selecting "Lock Tab", the tab acted as if "Lock Tab and
  Address" had been selected.
- Pasting an image from the clipboard wouldn't always generate a